Move textures, rename some stuff